--- a/cart.html
+++ b/cart.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>E-Comm Website by Code Step By Step</title>
+    <title>E-Comm Website by Yugesh </title>
     <link href="style.css" rel="stylesheet" />
     <link href="common.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -253,8 +253,8 @@
       </div>
       <div class="copy-right">
         <div>
-          © <b>Code Step by Step</b>. All Rights Reserved. Designed by
-          <b>Anil Sidhu</b>
+          © <b>Code by Yugesh</b>. All Rights Reserved. Designed by
+          <b>Yugesh Kushwaha</b>
         </div>
         <img src="./payments.png" alt="" />
       </div>
